# niryo_sorting_ai_vison

./: README.md  calibrate_poses .py  calibrate_poses.py  decision_node.py  frames_2026-04-09_09.19.31.gv  niryo_moveit_test.py  setup_vision.py  spawn_bottles.py  vision_node.py
install/: local_setup.sh  setup.sh
install/niryo_ai/share/niryo_ai/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/niryo_decision/lib/niryo_decision/: decision_node
install/niryo_decision/share/niryo_decision/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/niryo_gazebo/share/niryo_gazebo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/niryo_interfaces/share/niryo_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/niryo_ai/: package.xml  setup.cfg  setup.py
src/niryo_decision/: package.xml  setup.cfg  setup.py
src/niryo_decision/niryo_decision/: decision_node.py
src/niryo_gazebo/: CMakeLists.txt  package.xml
src/niryo_gazebo/launch/: gazebo.launch.py
src/niryo_gazebo/models/bottle_good/: model.sdf
src/niryo_gazebo/urdf/: niryo_ned2_gz.urdf.xacro
src/niryo_gazebo/worlds/: sorting_world.sdf
src/niryo_interfaces/: CMakeLists.txt  package.xml
src/niryo_ned2_moveit_config/config/: niryo_ned2.ros2_control.xacro  niryo_ned2.urdf.xacro
src/niryo_ned2_moveit_config/launch/: ned2_moveit_launch.py
src/niryo_tools/: setup.cfg  setup.py
src/niryo_vision/: package.xml  setup.cfg
(+66 files in other folders)
