<?xml version="1.0"?>
<package format="3">
  <name>niryo_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for Niryo Ned2 bottle sorting</description>
  <maintainer email="you@example.com">zidane</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>niryo_ned_description</exec_depend>
  <exec_depend>niryo_ned2_moveit_config</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
